--- a/app/src/main/res/layout/fragment_group_wallet.xml
+++ b/app/src/main/res/layout/fragment_group_wallet.xml
@@ -7,6 +7,20 @@
     android:layout_height="match_parent">
 
     <Button
+        android:id="@+id/gw_transfer_btn"
+        android:layout_width="116dp"
+        android:layout_height="41dp"
+        android:layout_marginBottom="252dp"
+        android:background="@drawable/roundedbutton"
+        android:text="Transfer"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/gw_transfer_title"
+        app:layout_constraintVertical_bias="0.884" />
+
+    <Button
         android:id="@+id/gw_deposit_button"
         android:layout_width="125dp"
         android:layout_height="51dp"
@@ -15,10 +29,9 @@
         android:text="Deposit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.527"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gw_depost_amt_input"
-        app:layout_constraintVertical_bias="0.313" />
+        app:layout_constraintVertical_bias="0.102" />
 
     <TextView
         android:id="@+id/gw_amount_title3"
@@ -27,10 +40,9 @@
         android:text="Amount"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.395"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gw_deposit_title"
-        app:layout_constraintVertical_bias="0.072" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/gw_depost_amt_input"
@@ -40,10 +52,10 @@
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintHorizontal_bias="0.648"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gw_deposit_title"
-        app:layout_constraintVertical_bias="0.169" />
+        app:layout_constraintVertical_bias="0.075" />
 
     <TextView
         android:id="@+id/gw_deposit_title"
@@ -53,10 +65,10 @@
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.059"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gw_divider2"
-        app:layout_constraintVertical_bias="0.056" />
+        app:layout_constraintVertical_bias="0.059" />
 
     <TextView
         android:id="@+id/gw_owner"
@@ -88,13 +100,12 @@
         android:id="@+id/gw_recipient_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:text="Recipient Username"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.729"
+        app:layout_constraintHorizontal_bias="0.807"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gw_transfer_title"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/gw_transfer_title" />
 
     <TextView
         android:id="@+id/gw_transfer_title"
@@ -104,10 +115,36 @@
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.513"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gw_divider"
-        app:layout_constraintVertical_bias="0.048" />
+        app:layout_constraintVertical_bias="0.051" />
+
+    <TextView
+        android:id="@+id/gw_amount_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Amount"
+        app:layout_constraintBottom_toTopOf="@+id/gw_amount_input"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.135"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gw_transfer_title"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <EditText
+        android:id="@+id/gw_amount_input"
+        android:layout_width="132dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="12dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.175"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gw_transfer_title"
+        app:layout_constraintVertical_bias="0.053" />
 
     <TextView
         android:id="@+id/gw_summary_title"
@@ -145,6 +182,7 @@
         app:layout_constraintTop_toBottomOf="@+id/gw_balance_title"
         app:layout_constraintVertical_bias="0.012" />
 
+
     <View
         android:id="@+id/gw_divider"
         android:layout_width="match_parent"
@@ -152,35 +190,8 @@
         android:background="?android:attr/listDivider"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.291"
+        app:layout_constraintVertical_bias="0.404"
         tools:layout_editor_absoluteX="0dp" />
-
-    <EditText
-        android:id="@+id/gw_amount_input"
-        android:layout_width="132dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="12dp"
-        android:ems="10"
-        android:inputType="number"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.161"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gw_transfer_title"
-        app:layout_constraintVertical_bias="0.056" />
-
-    <TextView
-        android:id="@+id/gw_amount_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Amount"
-        app:layout_constraintBottom_toTopOf="@+id/gw_amount_input"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.124"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gw_transfer_title"
-        app:layout_constraintVertical_bias="1.0" />
-
 
     <View
         android:id="@+id/gw_divider2"
@@ -189,7 +200,46 @@
         android:background="?android:attr/listDivider"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.593"
+        app:layout_constraintVertical_bias="0.652"
         tools:layout_editor_absoluteX="0dp" />
+
+    <TextView
+        android:id="@+id/group_id_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="116dp"
+        android:layout_marginTop="220dp"
+        android:text="Group ID:"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toTopOf="@+id/gw_divider"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/group_id_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="221dp"
+        android:text="ID"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toTopOf="@+id/gw_divider"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.087"
+        app:layout_constraintStart_toEndOf="@+id/group_id_title"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <EditText
+        android:id="@+id/gw_username_input"
+        android:layout_width="132dp"
+        android:layout_height="39dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/gw_transfer_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/gw_amount_input"
+        app:layout_constraintTop_toBottomOf="@+id/gw_recipient_title"
+        app:layout_constraintVertical_bias="0.181" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
